# mi4ulings

./: .bacon-locations  Cargo.toml  README.md  init-install.sh  justfile
crates/config/: Cargo.toml
crates/config/src/: example.rs  lib.rs
crates/docling/: Cargo.toml
crates/docling/.config/: mi4ulings-docling.toml
crates/docling/inputs/: entries.toml
crates/docling/logs/: docling.log.2025-04-07  docling.log.2025-04-08
crates/docling/outputs/docs.dfns.co/parts_html/: docs.dfns.co_.html  docs.dfns.co_d.html
crates/docling/outputs/docs.dfns.co/parts_md/: docs.dfns.co_.md
crates/docling/outputs/docs.dfns.co/results_md/: docs.dfns.co.md
crates/docling/src/: converter.rs  crawler.rs  lib.rs  main.rs  processor.rs
docs/: PLAN.md
docs/dev/: CONFIG.md  CONFIG_worklog.md  DOCLING.md  DOCLING_worklog.md  MAIN_SERVICE.md  PLAN-01.md  PLAN-01_worklog.md
docs/dev/refs/: spider-conf-example.rs  spider-transform-example.rs
