[package]
name = "mi4ulings-docling"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "Web crawling and document processing tool"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
mi4ulings-config = { path = "../config" }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
spider = "1.96"                                                             # Updated spider version if needed, check latest compatible
tokio = { version = "1.34", features = ["full", "tracing"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
url = "2.4"
html-escape = "0.2"                                                         # Added for title decoding

# HTML to Markdown converters
htmd = { version = "0.1.6", optional = true }
fast_html2md = { version = "0.0.48", optional = true }

[features]
default = ["htmd"]
html2md = [
    "fast-html2md",
] # Kept for potential backward compatibility, but htmd is default
htmd = ["dep:htmd"]
fast-html2md = ["dep:fast_html2md"]
full = ["htmd", "fast-html2md"]

[[bin]]
name = "docling"
path = "src/main.rs"
